--- a/app/src/main/res/layout/activity_cat_list.xml
+++ b/app/src/main/res/layout/activity_cat_list.xml
@@ -7,9 +7,10 @@
     tools:context=".CatListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_cat_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3" />
+        app:spanCount="2" />
 
 </RelativeLayout>
