--- a/app/src/main/res/layout/cat_list_recycler_view.xml
+++ b/app/src/main/res/layout/cat_list_recycler_view.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:orientation="vertical"
-    android:weightSum="5">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_marginLeft="32dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="32dp"
+    android:padding="8dp"
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="5">
 
         <ImageView
+            android:id="@+id/iv_cat"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="3"
@@ -19,6 +24,7 @@
             android:src="@drawable/cat_1_idle_1" />
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -26,6 +32,7 @@
             android:text="야옹이" />
 
         <TextView
+            android:id="@+id/tv_at"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -35,4 +42,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
