--- a/app/src/main/res/layout/activity_cat_list.xml
+++ b/app/src/main/res/layout/activity_cat_list.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="500dp"
     tools:context=".CatListActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cat_list"
+    <GridView
+        android:layout_margin="8dp"
+        android:id="@+id/gv_cat_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2" />
+        android:gravity="center"
+        android:numColumns="2"
+        android:stretchMode="columnWidth" />
 
 </RelativeLayout>
